include example for how to use agent framework with vercel ai sdk

--- a/agents-docs/_snippets/auth/RunApiAuthModes.mdx
+++ b/agents-docs/_snippets/auth/RunApiAuthModes.mdx
@@ -3,11 +3,11 @@
 Choose the authentication method:
 
 <Tabs>
-<Tab title="Using API Key">
+<Tab title="Using Graph API Key">
 
-**Create an API Key:**
+**Create a Graph API Key:**
 1. Open the Visual Builder Dashboard
-2. Go to your Project → **API Keys**
+2. Go to your Project → **Graph API Keys**
 3. Click **Create**, select the target agent graph
 4. Copy the API key (it will be shown once) and store it securely
 
