init self-host docs

--- a/agents-docs/content/docs/self-hosting/vercel.mdx
+++ b/agents-docs/content/docs/self-hosting/vercel.mdx
@@ -1,7 +1,7 @@
 ---
 title: Vercel
-sidebarTitle: Vercel
 description: Deploy the Inkeep Agent Framework to Vercel
+icon: "LuRocket"
 ---
 
 ## Coming soon
