--- a/agents-docs/content/docs/self-hosting/docker.mdx
+++ b/agents-docs/content/docs/self-hosting/docker.mdx
@@ -1,7 +1,7 @@
 ---
 title: Docker
-sidebarTitle: Docker
-description: Build and run the Inkeep Agent Framework with docker locally
+description: Deploy the Inkeep Agent Framework using Docker
+icon: "LuRocket"
 ---
 
 ## Coming soon
