--- a/agents-docs/content/docs/typescript-sdk/model-settings.mdx
+++ b/agents-docs/content/docs/typescript-sdk/model-settings.mdx
@@ -330,7 +330,10 @@ AI_GATEWAY_API_KEY=your-key
 3. **Visual Builder**: Push project to inspect model settings
 
 <Note>
-`openai/gpt-5-2025-08-07` and `openai/gpt-4.1-mini-2025-04-14` require a verified OpenAI organization.
+**OpenAI Verification Requirements:**
+- GPT-5 family models (`gpt-5`, `gpt-5-mini`, `gpt-5-nano`) - Some features require verification:
+  - Streaming responses - Requires org verification
+  - Reasoning Summaries (Responses API) - Requires org verification
 </Note>
 
 ## Related Documentation
