--- a/agents-docs/content/docs/self-hosting/vercel.mdx
+++ b/agents-docs/content/docs/self-hosting/vercel.mdx
@@ -15,6 +15,8 @@ TURSO_AUTH_TOKEN=
 ```
 
 2. [**SigNoz**](https://signoz.io/)
+
+Follow these instructions on getting started with [SigNoz Cloud](/quick-start/observability#option-1-signoz-cloud-setup).
 ```
 SIGNOZ_URL=
 SIGNOZ_API_KEY=
@@ -24,13 +26,15 @@ OTEL_EXPORTER_OTLP_TRACES_HEADERS=signoz-ingestion-key=<your-ingestion-key>
 ```
 
 3. [**Nango**](https://www.nango.dev/)
+
+Follow these instructions on getting started with [Nango Cloud](/quick-start/credentials#option-1-nango-cloud-setup).
 ```
 NANGO_SECRET_KEY=
 ```
 
 ### Create a GitHub repo with your project
 
-[Follow these steps in the docs](https://docs.inkeep.com/quick-start/start-development) with the `npx @inkeep/create-agents` CLI command to create a project.
+[Follow these steps in the docs](/quick-start/start-development) with the `npx @inkeep/create-agents` CLI command to create a project.
 
 Then push your reposistory to GitHub.
 
